adicionado botão para voltar no form

--- a/new-character.html
+++ b/new-character.html
@@ -4,16 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulário</title>
+  <title>Adicionar Personagem</title>
   <link rel="stylesheet" href="./style/form.css">
   <link rel="stylesheet" href="./style/shared.css">
+  <script src="https://kit.fontawesome.com/88456b759f.js" crossorigin="anonymous"></script>
 </head>
 <body class="body">
   <header class="header">
     <h1 class="h1-header">Personagens de Bob Esponja</h1>
   </header>
     <div class="content-div">
-      <div>
+      <div class="form-header-div">
+        <a href="./index.html" class="back-link"><i class="fa-solid fa-arrow-left-long"></i></a>
         <h2 class="form-title">Adicionar Personagem</h2>
       </div>
       <form id="character-form">
