--- a/pages/new-character.html
+++ b/pages/new-character.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adicionar Personagem</title>
-  <link rel="stylesheet" href="./style/form.css">
-  <link rel="stylesheet" href="./style/shared.css">
+  <link rel="stylesheet" href="../style/forms.css">
+  <link rel="stylesheet" href="../style/shared.css">
+  <link rel="stylesheet" href="../style/new-character.css">
   <script src="https://kit.fontawesome.com/88456b759f.js" crossorigin="anonymous"></script>
 </head>
 <body class="body">
@@ -15,25 +16,25 @@
   </header>
     <div class="content-div">
       <div class="form-header-div">
-        <a href="./index.html" class="back-link"><i class="fa-solid fa-arrow-left-long"></i></a>
+        <a href="../index.html" class="back-link"><i class="fa-solid fa-arrow-left-long"></i></a>
         <h2 class="form-title">Adicionar Personagem</h2>
       </div>
       <form id="character-form">
-        <input type="text" placeholder="Nome" class="form-input-text" name="name" id="name" required>
-        <input type="text" placeholder="Gênero" class="form-input-text" name="gender" id="gender" required>
-        <input type="text" placeholder="Espécie" class="form-input-text" name="specie" id="specie" required>
-        <input type="text" placeholder="Profissão" class="form-input-text" name="profession" id="profession" required>
-        <input type="number" placeholder="Aparições" class="form-input-text" name="appearances" id="appearances" required>
+        <input type="text" placeholder="Nome" class="form-input-text form-input" name="name" id="name" required>
+        <input type="text" placeholder="Gênero" class="form-input-text form-input" name="gender" id="gender" required>
+        <input type="text" placeholder="Espécie" class="form-input-text form-input" name="specie" id="specie" required>
+        <input type="text" placeholder="Profissão" class="form-input-text form-input" name="profession" id="profession" required>
+        <input type="number" placeholder="Aparições" class="form-input-text form-input" name="appearances" id="appearances" required>
         <div class="radio-input-div">
           <span class="radio-input-div-text">Personagem está vivo?</span>
           <div class="label-input-radio-divs-div" id="radio-div">
             <div class="label-input-radio-div">
               <label for="alive" class="radio-text">Vivo</label>
-              <input type="radio" class="radio" name="alive" id="its-alive" value="true" required>
+              <input type="radio" class="radio form-input" name="alive" id="its-alive" value="true" required>
             </div>
             <div class="label-input-radio-div">
               <label for="dead" class="radio-text">Morto</label>
-              <input type="radio" class="radio" name="alive" id="its-dead" value="false" required>
+              <input type="radio" class="radio form-input" name="alive" id="its-dead" value="false" required>
             </div>
           </div>
         </div>
@@ -44,6 +45,6 @@
       </form>
     </div>
 
-    <script type="module" src="./script/new-character.js"></script>
+    <script type="module" src="../script/new-character.js"></script>
 </body>
 </html>
