adicionado placeholder na tela de editar

--- a/pages/edit-character.html
+++ b/pages/edit-character.html
@@ -19,11 +19,11 @@
         <h2 class="form-title">Editar Personagem</h2>
       </div>
       <form id="character-form">
-        <input type="text" class="form-input-text" name="name" id="name">
-        <input type="text" class="form-input-text" name="gender" id="gender">
-        <input type="text" class="form-input-text" name="specie" id="specie">
-        <input type="text" class="form-input-text" name="profession" id="profession">
-        <input type="number" class="form-input-text" name="appearances" id="appearances">
+        <input type="text" class="form-input-text" name="name" id="name" placeholder="Nome">
+        <input type="text" class="form-input-text" name="gender" id="gender" placeholder="Gênero">
+        <input type="text" class="form-input-text" name="specie" id="specie" placeholder="Espécie">
+        <input type="text" class="form-input-text" name="profession" id="profession" placeholder="Profissão">
+        <input type="number" class="form-input-text" name="appearances" id="appearances" placeholder="Aparições">
         <div class="buttons-form-div">
           <button type="button" class="action-button form-button" id="cancel-button">Cancelar</button>
           <button type="submit" class="action-button form-button" id="send-button">Salvar</button>
