retirada classe form-input

--- a/pages/new-character.html
+++ b/pages/new-character.html
@@ -20,11 +20,11 @@
         <h2 class="form-title">Adicionar Personagem</h2>
       </div>
       <form id="character-form">
-        <input type="text" placeholder="Nome" class="form-input-text form-input" name="name" id="name" required>
-        <input type="text" placeholder="Gênero" class="form-input-text form-input" name="gender" id="gender" required>
-        <input type="text" placeholder="Espécie" class="form-input-text form-input" name="specie" id="specie" required>
-        <input type="text" placeholder="Profissão" class="form-input-text form-input" name="profession" id="profession" required>
-        <input type="number" placeholder="Aparições" class="form-input-text form-input" name="appearances" id="appearances" required>
+        <input type="text" class="form-input-text" name="name" id="name" placeholder="Nome" required>
+        <input type="text" class="form-input-text" name="gender" id="gender" placeholder="Gênero" required>
+        <input type="text" class="form-input-text" name="specie" id="specie" placeholder="Espécie" required>
+        <input type="text" class="form-input-text" name="profession" id="profession" placeholder="Profissão" required>
+        <input type="number" class="form-input-text" name="appearances" id="appearances" placeholder="Aparições" required>
         <div class="radio-input-div">
           <span class="radio-input-div-text">Personagem está vivo?</span>
           <div class="label-input-radio-divs-div" id="radio-div">
