consertados links do css

--- a/form.html
+++ b/form.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title id="head-title"></title>
-  <link rel="stylesheet" href="../style/forms.css">
-  <link rel="stylesheet" href="../style/shared.css">
+  <link rel="stylesheet" href="./style/forms.css">
+  <link rel="stylesheet" href="./style/shared.css">
   <script src="https://kit.fontawesome.com/88456b759f.js" crossorigin="anonymous"></script>
 </head>
 <body class="body">
